# jane-street-puzzles

./: .gitignore  README.md  flake.nix  pyproject.toml
src/jane_street_puzzles/: __init__.py  puzzle_2025_09.py
src/jane_street_puzzles/utils/: cp.py  grids.py  grids_test.py  polyominos.py
